force-app/main/default/objects/custom_create23__c/custom_create23__c.object-meta.xml
<CustomObject>
    <label>Custom created object23</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects23</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>