force-app/main/default/objects/custom_create23__c/fields/custom_create_23field525__c.field-meta.xml
<CustomField>
    <fullName>custom_create_23field525__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 23field525</label>
    <type>Checkbox</type>
</CustomField>